fix: 조회된 채널이 정렬되지 못하던 오류 수정